<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryPurple"
    android:orientation="vertical"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/purplelogo" />

    <TextView
        android:id="@+id/textViewWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTextRegisterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:background="@drawable/roundededittext"

        android:backgroundTint="@color/textColor"
        android:ems="17"
        android:inputType="text"
        android:padding="20dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:background="@drawable/roundededittext"
        android:backgroundTint="@color/textColor"
        android:ems="17"
        android:inputType="text"
        android:padding="20dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:background="@drawable/roundededittext"
        android:backgroundTint="@color/textColor"
        android:ems="17"
        android:inputType="text"
        android:padding="20dp"
        android:text="@string/registerMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/Lighterpurple"
        android:text="@string/register" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:text="@string/checkIfAlreadyAccount"
        android:textColor="@color/textColor"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtViewRegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/Login_btn"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

</LinearLayout>