<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryPurple"
    android:orientation="vertical"
    tools:context=".HomeScreenActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Lighterpurple"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/homeScreenWelcome"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/welcomeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="TextView"
                android:textColor="@color/textColor"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:layout_weight="0"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:id="@+id/cardviewschedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Secondary"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="50dp"
                android:text="@string/homeScreenSchema"
                android:textColor="@color/textColor"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:text="Hjälpmedel"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <GridLayout

        android:id="@+id/homescreengrid"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="16dp"
        android:rowCount="2"
        android:useDefaultMargins="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/forumCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/Secondary"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/homeScreenForum"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">


            <RelativeLayout
                android:id="@+id/cardviewquiz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secondary">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/homeScreenQuiz"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">


            <RelativeLayout
                android:id="@+id/cardvieweducation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secondary">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/homeScreenEducationMaterial"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">


            <RelativeLayout
                android:id="@+id/cardviewnote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Secondary">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Anteckningar"
                    android:textColor="@color/textColor"
                    android:textSize="24sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@color/PrimaryPurple"
        android:backgroundTint="@color/PrimaryPurple">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/homeScreenBnv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/textColor"
        app:backgroundTint="@color/Lighterpurple"

        app:itemIconSize="36dp"
        app:itemIconTint="@color/textColor"
        app:labelVisibilityMode="unlabeled"

        app:menu="@menu/bottom_menu" />
</RelativeLayout>



</LinearLayout>